# transcriber-extension

./: README.md
fastapi-server/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
frontend-extension/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vite.sh
frontend-extension/public/: audio-processor.js  manifest.json  micRequest.js  requestPermissions.js
frontend-extension/src/: App.tsx
